--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="swiper product-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide box">
-            <img src="/chair.jpg" alt="" />
+            <img src="chair.jpg" alt="" />
             <h3>Chairs</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -146,7 +146,7 @@
           </div>
 
           <div class="swiper-slide box">
-            <img src="/table.jpg" alt="" />
+            <img src="table.jpg" alt="" />
             <h3>Tables</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -160,7 +160,7 @@
           </div>
 
           <div class="swiper-slide box">
-            <img src="/sofa.jpg" alt="" />
+            <img src="sofa.jpg" alt="" />
             <h3>Sofas</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -174,7 +174,7 @@
           </div>
 
           <div class="swiper-slide box">
-            <img src="/beds.jpg" alt="" />
+            <img src="beds.jpg" alt="" />
             <h3>Beds</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -191,7 +191,7 @@
         <div class="swiper product-slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide box">
-              <img src="/cab.jpg" alt="" />
+              <img src="cab.jpg" alt="" />
               <h3>Cabinates</h3>
               <div class="price">$4.99-$10.00/-</div>
               <div class="stars">
@@ -205,7 +205,7 @@
             </div>
 
             <div class="swiper-slide box">
-              <img src="/kitchen.jpg" alt="" />
+              <img src="kitchen.jpg" alt="" />
               <h3>Kitchen</h3>
               <div class="price">$4.99-$10.00/-</div>
               <div class="stars">
@@ -229,7 +229,7 @@
       <div class="box-container">
         <div class="box">
           <img
-            src="/living.jpg"
+            src="living.jpg"
             alt=""
             style="width: 30rem; padding-top: 6rem"
           />
@@ -238,14 +238,14 @@
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
-          <img src="/kit.jpg" alt="" style="width: 30rem" />
+          <img src="kit.jpg" alt="" style="width: 30rem" />
           <h3>Kitchen</h3>
           <p>upto 45% off</p>
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
           <img
-            src="/bedroom.jpg"
+            src="bedroom.jpg"
             alt=""
             style="width: 30rem; padding-top: 2.5rem"
           />
@@ -255,7 +255,7 @@
         </div>
         <div class="box">
           <img
-            src="/balcony.jpg"
+            src="balcony.jpg"
             alt=""
             style="width: 30rem; padding-top: 8.5rem"
           />
