--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h1 class="heading">our <span>features</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="images/eco.jpg" alt="" style="width: 29rem" />
+          <img src="/eco.jpg" alt="" style="width: 29rem" />
           <h3>Eco-friendly</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ea
@@ -103,7 +103,7 @@
           <a href="#" class="btn">read more</a>
         </div>
         <div class="box">
-          <img src="images/cus.jpg" alt="" style="width: 29rem" />
+          <img src="/cus.jpg" alt="" style="width: 29rem" />
           <h3>Customization</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ea
@@ -114,7 +114,7 @@
           <a href="#" class="btn">read more</a>
         </div>
         <div class="box">
-          <img src="images/fs.jpg" alt="" style="width: 29rem" />
+          <img src="/fs.jpg" alt="" style="width: 29rem" />
           <h3>Faster Service</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ea
@@ -132,7 +132,7 @@
       <div class="swiper product-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide box">
-            <img src="images/chair.jpg" alt="" />
+            <img src="/chair.jpg" alt="" />
             <h3>Chairs</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -146,7 +146,7 @@
           </div>
 
           <div class="swiper-slide box">
-            <img src="images/table.jpg" alt="" />
+            <img src="/table.jpg" alt="" />
             <h3>Tables</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -160,7 +160,7 @@
           </div>
 
           <div class="swiper-slide box">
-            <img src="images/sofa.jpg" alt="" />
+            <img src="/sofa.jpg" alt="" />
             <h3>Sofas</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -174,7 +174,7 @@
           </div>
 
           <div class="swiper-slide box">
-            <img src="images/beds.jpg" alt="" />
+            <img src="/beds.jpg" alt="" />
             <h3>Beds</h3>
             <div class="price">$4.99-$10.00/-</div>
             <div class="stars">
@@ -191,7 +191,7 @@
         <div class="swiper product-slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide box">
-              <img src="images/cab.jpg" alt="" />
+              <img src="/cab.jpg" alt="" />
               <h3>Cabinates</h3>
               <div class="price">$4.99-$10.00/-</div>
               <div class="stars">
@@ -205,7 +205,7 @@
             </div>
 
             <div class="swiper-slide box">
-              <img src="images/kitchen.jpg" alt="" />
+              <img src="/kitchen.jpg" alt="" />
               <h3>Kitchen</h3>
               <div class="price">$4.99-$10.00/-</div>
               <div class="stars">
@@ -229,7 +229,7 @@
       <div class="box-container">
         <div class="box">
           <img
-            src="images/living.jpg"
+            src="/living.jpg"
             alt=""
             style="width: 30rem; padding-top: 6rem"
           />
@@ -238,14 +238,14 @@
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
-          <img src="images/kit.jpg" alt="" style="width: 30rem" />
+          <img src="/kit.jpg" alt="" style="width: 30rem" />
           <h3>Kitchen</h3>
           <p>upto 45% off</p>
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
           <img
-            src="images/bedroom.jpg"
+            src="/bedroom.jpg"
             alt=""
             style="width: 30rem; padding-top: 2.5rem"
           />
@@ -255,7 +255,7 @@
         </div>
         <div class="box">
           <img
-            src="images/balcony.jpg"
+            src="/balcony.jpg"
             alt=""
             style="width: 30rem; padding-top: 8.5rem"
           />
