--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>
         <div class="box">
           <img
-            src="/bedroom.jpg"
+            src="bedroom.jpg"
             alt=""
             style="width: 30rem; padding-top: 2.5rem"
           />
