--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <div class="box-container">
         <div class="box">
           <img
-            src="/living.jpg"
+            src="living.jpg"
             alt=""
             style="width: 30rem; padding-top: 6rem"
           />
@@ -238,7 +238,7 @@
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
-          <img src="/kit.jpg" alt="" style="width: 30rem" />
+          <img src="kit.jpg" alt="" style="width: 30rem" />
           <h3>Kitchen</h3>
           <p>upto 45% off</p>
           <a href="#" class="btn">shop now</a>
@@ -255,7 +255,7 @@
         </div>
         <div class="box">
           <img
-            src="/balcony.jpg"
+            src="balcony.jpg"
             alt=""
             style="width: 30rem; padding-top: 8.5rem"
           />
